// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LEGACY createRequest() creates a valid JWT for a request 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiMm5RdGlRRzZDZ20xR1lUQmFhS0Fncjc2dVk3aVNleFVrcVgifQ.ty2C5vr9-R9LqBGnEEATUA3PtNNpr_sLVIpKD4EV904tlUX5OXiY5cQD4x9Dc4LbwXsHWBGci3brLroqZkQLyw",
  "payload": Object {
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`LEGACY receive() returns profile mixing public and private claims 1`] = `
Object {
  "address": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "country": "NI",
  "did": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "name": "Davie",
  "phone": "+15555551234",
  "publicEncKey": undefined,
  "publicKey": "0x048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
}
`;

exports[`attest() has correct payload in JWT for an attestation 1`] = `Promise {}`;

exports[`authenticate() handles response with missing challenge 1`] = `Promise {}`;

exports[`authenticate() returns profile mixing public and private claims 1`] = `
Object {
  "address": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "country": "NI",
  "did": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "name": "Davie",
  "phone": "+15555551234",
  "publicEncKey": undefined,
  "publicKey": "0x048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
}
`;

exports[`authenticate() returns profile mixing public and private claims and verified credentials 1`] = `
Object {
  "address": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "country": "NI",
  "did": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "name": "Davie",
  "phone": "+15555551234",
  "publicEncKey": undefined,
  "publicKey": "0x048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
  "verified": Array [
    Object {
      "claim": Object {
        "email": "bingbangbung@email.com",
      },
      "exp": 1485321134,
      "iat": 1485321133,
      "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
      "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInN1YiI6IjB4MTEyMjMzIiwiY2xhaW0iOnsiZW1haWwiOiJiaW5nYmFuZ2J1bmdAZW1haWwuY29tIn0sImV4cCI6MTQ4NTMyMTEzNCwiaXNzIjoiMm5RdGlRRzZDZ20xR1lUQmFhS0Fncjc2dVk3aVNleFVrcVgifQ.a-1ynKtAaDBE-Pr_D1KwequRjfG6W3vJsdiilUxEvtGMgaqYq7LKbJk78Xz78omqXCXib9MZxP7LABBUekoJgw",
      "sub": "0x112233",
    },
  ],
}
`;

exports[`authenticate() returns profile with device key claims 1`] = `
Object {
  "address": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "country": "NI",
  "deviceKey": "0xdeviceKey",
  "did": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "name": "Super Developer",
  "publicEncKey": undefined,
  "publicKey": "0x048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
}
`;

exports[`authenticate() returns profile with only public claims 1`] = `
Object {
  "address": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "country": "NI",
  "did": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "name": "Super Developer",
  "publicEncKey": undefined,
  "publicKey": "0x048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
}
`;

exports[`authenticate() returns profile with private chain network id claims 1`] = `
Object {
  "address": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "country": "NI",
  "did": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "name": "Super Developer",
  "networkAddress": "34wjsxwvduano7NFC8ujNJnFjbacgYeWA8m",
  "publicEncKey": undefined,
  "publicKey": "0x048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
}
`;

exports[`authenticate() returns pushToken if available 1`] = `
Object {
  "address": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "country": "NI",
  "did": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "name": "Super Developer",
  "publicEncKey": undefined,
  "publicKey": "0x048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
  "pushToken": "PUSHTOKEN",
}
`;

exports[`configuration configNetworks if networks key is passed in it must contain configuration object 1`] = `"Network configuration object required"`;

exports[`configuration configNetworks should require a registry address 1`] = `"Malformed network config object, object must have 'registry' key specified."`;

exports[`configuration configNetworks should require a rpcUrl 1`] = `"Malformed network config object, object must have 'rpcUrl' key specified."`;

exports[`createRequest() creates a valid JWT for a request 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiMm5RdGlRRzZDZ20xR1lUQmFhS0Fncjc2dVk3aVNleFVrcVgifQ.ty2C5vr9-R9LqBGnEEATUA3PtNNpr_sLVIpKD4EV904tlUX5OXiY5cQD4x9Dc4LbwXsHWBGci3brLroqZkQLyw",
  "payload": Object {
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT for a plain request for public details 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6IjJuUXRpUUc2Q2dtMUdZVEJhYUtBZ3I3NnVZN2lTZXhVa3FYIn0.HQ0ak61XO2nANw99qsn1SZ7GtPo36V_GNsJtjn_eUca23cVVU7i9BA-0lF_B4siAozTC8NqOyBOtaAASPEU-pQ",
  "payload": Object {
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT for a request 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiMm5RdGlRRzZDZ20xR1lUQmFhS0Fncjc2dVk3aVNleFVrcVgifQ.ty2C5vr9-R9LqBGnEEATUA3PtNNpr_sLVIpKD4EV904tlUX5OXiY5cQD4x9Dc4LbwXsHWBGci3brLroqZkQLyw",
  "payload": Object {
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT for a request asking for verified credentials 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwidmVyaWZpZWQiOlsibmFtZSJdLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiIyblF0aVFHNkNnbTFHWVRCYWFLQWdyNzZ1WTdpU2V4VWtxWCJ9.cOjKG11VSWcOvBZyGfZDQ14Nv_1GnUp8XoxveETIXD5dQty6-VKGXLA5lwJeh1-klh41XCegkvgPunay5IJ5qA",
  "payload": Object {
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
    "verified": Array [
      "name",
    ],
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT for a request for push notifications 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwicGVybWlzc2lvbnMiOlsibm90aWZpY2F0aW9ucyJdLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiIyblF0aVFHNkNnbTFHWVRCYWFLQWdyNzZ1WTdpU2V4VWtxWCJ9.ser4dDohgXN8ZHY-uZ8Be9yJQ4WVtepIAuq0KpovsSmWNb81E7KBm_yhK-HoorYKMJmZxL2aAFTVnDxoGzGB8w",
  "payload": Object {
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "permissions": Array [
      "notifications",
    ],
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT for a request with callbackUrl 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwiY2FsbGJhY2siOiJodHRwczovL215c2VydmVyLmNvbSIsInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6IjJuUXRpUUc2Q2dtMUdZVEJhYUtBZ3I3NnVZN2lTZXhVa3FYIn0.1qewyBkOZNgAZaIeEuBhnbVWndt0yUe52WxdYqPlg3kXJSdSUlivXT6zZ8eVkQdPhfWNwBcMMupIn6zWt7DZSw",
  "payload": Object {
    "callback": "https://myserver.com",
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT requesting a specific network_id 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsIm5ldCI6IjB4NCIsInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6IjJuUXRpUUc2Q2dtMUdZVEJhYUtBZ3I3NnVZN2lTZXhVa3FYIn0.o1u_TJMPpxBJMkC81-WrRK-M8Le6rIfR-nFLG7PYXkgEnzn92AwZdqc1YLT8Bk8oelcF6wYBkLLgpd5GJZjsQw",
  "payload": Object {
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "net": "0x4",
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT requesting a specific network_id 2`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsIm5ldCI6IjB4NCIsInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6IjJuUXRpUUc2Q2dtMUdZVEJhYUtBZ3I3NnVZN2lTZXhVa3FYIn0.o1u_TJMPpxBJMkC81-WrRK-M8Le6rIfR-nFLG7PYXkgEnzn92AwZdqc1YLT8Bk8oelcF6wYBkLLgpd5GJZjsQw",
  "payload": Object {
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "net": "0x4",
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT requesting accountType of devicekey 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsImFjdCI6ImRldmljZWtleSIsInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6IjJuUXRpUUc2Q2dtMUdZVEJhYUtBZ3I3NnVZN2lTZXhVa3FYIn0.WsCfrCOl7CzV3Lrvw-1o97jusUidUOHpvsw_8-jOOZGFgDmbcEPsXkI0WgIrMd8Wkk1ZIMGJv58DXcXK-g0rhA",
  "payload": Object {
    "act": "devicekey",
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT requesting accountType of general 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsImFjdCI6ImdlbmVyYWwiLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiIyblF0aVFHNkNnbTFHWVRCYWFLQWdyNzZ1WTdpU2V4VWtxWCJ9.3ntHkDvt80w71mK7oXWqIQMG_VuFwswvR9gBT-hZEwlss80xB3tygYYhmtEReyG-aEf_3P2EnEftWvRDcPI49g",
  "payload": Object {
    "act": "general",
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT requesting accountType of keypair 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsImFjdCI6ImtleXBhaXIiLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiIyblF0aVFHNkNnbTFHWVRCYWFLQWdyNzZ1WTdpU2V4VWtxWCJ9.CmQAkfzHDDdWCrP-UefjRDA3jqySdTyBy1FnzbuHwRiEZimo9RVuvhvHPfwAy322Ak7oXr3SSVEbyZBLC8sZXQ",
  "payload": Object {
    "act": "keypair",
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT requesting accountType of none 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsImFjdCI6Im5vbmUiLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiIyblF0aVFHNkNnbTFHWVRCYWFLQWdyNzZ1WTdpU2V4VWtxWCJ9.lvd8gPXImo9aFJKteF1NN5A8BYcJ3bYs4xWN18eRkPjrJBvYFMvER1zegOJlxZo3MqEv2xUxs066x4PcknL0ow",
  "payload": Object {
    "act": "none",
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT requesting accountType of segregated 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsImFjdCI6InNlZ3JlZ2F0ZWQiLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiIyblF0aVFHNkNnbTFHWVRCYWFLQWdyNzZ1WTdpU2V4VWtxWCJ9.8dn-_Luvb5n8s6hk1Q4XJ0-OVjdC_ZINVErQ9-0-s4Sochnb5YXvh6U46Zsbn9YwijjcdeL9GJn42MT-5agLCQ",
  "payload": Object {
    "act": "segregated",
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest() has correct payload in JWT requesting unsupported accountType 1`] = `[Error: Unsupported accountType gold]`;

exports[`createRequest() ignores unsupported request parameters 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6IjJuUXRpUUc2Q2dtMUdZVEJhYUtBZ3I3NnVZN2lTZXhVa3FYIn0.HQ0ak61XO2nANw99qsn1SZ7GtPo36V_GNsJtjn_eUca23cVVU7i9BA-0lF_B4siAozTC8NqOyBOtaAASPEU-pQ",
  "payload": Object {
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "type": "shareReq",
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createVerificationRequest creates a valid JWT for a request 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInVuc2lnbmVkQ2xhaW0iOnsiY2xhaW0iOnsidGVzdCI6eyJwcm9wMSI6MSwicHJvcDIiOjJ9fX0sInN1YiI6ImRpZDp1cG9ydDoyMjNhYjQ1IiwidHlwZSI6InZlclJlcSIsImlzcyI6IjJuUXRpUUc2Q2dtMUdZVEJhYUtBZ3I3NnVZN2lTZXhVa3FYIn0.4Bm3F8RT0cfM3w2_-v1fO6IB-Uezhsg-BksjaIgeFd5Fw5l5z2bbRGhyX-caKI3Zu4Q0Om9V8HNCuQbi-W-M5A",
  "payload": Object {
    "iat": 1485321133,
    "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "sub": "did:uport:223ab45",
    "type": "verReq",
    "unsignedClaim": Object {
      "claim": Object {
        "test": Object {
          "prop1": 1,
          "prop2": 2,
        },
      },
    },
  },
  "profile": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKey": Array [
      Object {
        "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
        "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
        "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "signer": Object {
    "ethereumAddress": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "id": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX#owner",
    "owner": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "publicKeyHex": "048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`receive returns profile mixing public and private claims 1`] = `
Object {
  "address": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "country": "NI",
  "did": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "name": "Davie",
  "phone": "+15555551234",
  "publicEncKey": undefined,
  "publicKey": "0x048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
}
`;

exports[`receive returns profile mixing public and private claims 2`] = `undefined`;

exports[`receive returns profile mixing public and private claims and verified credentials 1`] = `
Object {
  "address": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "country": "NI",
  "did": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "name": "Davie",
  "phone": "+15555551234",
  "publicEncKey": undefined,
  "publicKey": "0x048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
  "verified": Array [
    Object {
      "claim": Object {
        "email": "bingbangbung@email.com",
      },
      "exp": 1485321134,
      "iat": 1485321133,
      "iss": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
      "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE0ODUzMjExMzMsInN1YiI6IjB4MTEyMjMzIiwiY2xhaW0iOnsiZW1haWwiOiJiaW5nYmFuZ2J1bmdAZW1haWwuY29tIn0sImV4cCI6MTQ4NTMyMTEzNCwiaXNzIjoiMm5RdGlRRzZDZ20xR1lUQmFhS0Fncjc2dVk3aVNleFVrcVgifQ.a-1ynKtAaDBE-Pr_D1KwequRjfG6W3vJsdiilUxEvtGMgaqYq7LKbJk78Xz78omqXCXib9MZxP7LABBUekoJgw",
      "sub": "0x112233",
    },
  ],
}
`;

exports[`receive returns profile mixing public and private claims and verified credentials 2`] = `undefined`;

exports[`receive returns profile with device key claims 1`] = `
Object {
  "address": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "country": "NI",
  "deviceKey": "0xdeviceKey",
  "did": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "name": "Bob Smith",
  "publicEncKey": undefined,
  "publicKey": "0x048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
}
`;

exports[`receive returns profile with only public claims 1`] = `
Object {
  "address": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "country": "NI",
  "did": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "name": "Bob Smith",
  "publicEncKey": undefined,
  "publicKey": "0x048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
}
`;

exports[`receive returns profile with only public claims 2`] = `undefined`;

exports[`receive returns profile with private chain network id claims 1`] = `
Object {
  "address": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "country": "NI",
  "did": "2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "name": "Bob Smith",
  "networkAddress": "34wjsxwvduano7NFC8ujNJnFjbacgYeWA8m",
  "publicEncKey": undefined,
  "publicKey": "0x048f71f156f9b489d8c566c9943585d4c255aa5d22924abe3b9f7997de46a378ac89a668eacb9053ceac72f6a0abdeee025d61984059a6732e6cb4f106ed281ffe",
}
`;

exports[`receive returns profile with private chain network id claims 2`] = `undefined`;
